@@ -1,7 +1,7 @@
 /*
  * ExecutableAction.java
  *
- * Copyright 2009-2010 Patrick Mairif.
+ * Copyright 2009-2012 Patrick Mairif.
  * The program is distributed under the terms of the Apache License (ALv2).
  * 
  * tabstop=4, charset=UTF-8
@@ -11,7 +11,6 @@ package de.highbyte_le.weberknecht.request.actions;
 import java.io.IOException;
 
 import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 
 import de.highbyte_le.weberknecht.request.ContentProcessingException;
 
@@ -27,6 +26,6 @@ public interface ExecutableAction {
 	 * @throws ActionExecutionException
 	 * 		if problems during execution occur
 	 */
-	public void execute(HttpServletRequest request, HttpServletResponse response)
+	public void execute(HttpServletRequest request)
 		throws IOException, ActionExecutionException, ContentProcessingException;
 }
