@@ -10,6 +10,7 @@ next (1.0):
 	- actions don't throw ServletExceptions any more.
 	- rpx-stuff moved to module 
 	- build number and Version.DEFAULT was dropped
+	- execute() in actions without HttpServletResponse
 
 0.12.2:
 	- bugfix: fixed null pointer exception, when routing didn't match.
